documentation added new version of openapi
