# controllers/wordbaseView.js
@@ -1,14 +1,16 @@
 const { getWordListHandler } = require('./word');
 
-/* Handle wordbase view request */
+/* Handles wordbase view request */
 exports.getWordbaseViewHandler = async function(req, res) { await index(req, res); }
 
+/* Displays wordbase page */
 async function index(req, res) {
+    /* Checks if user is logged in */
     if(!req.session.isLoggedIn) {
         res.redirect('/');
     } else
     await getWordListHandler(req, res).then(wordList => {
-        console.log(JSON.stringify(req.session));
+        /* Get user's word list and render wordbase page */
         res.render('wordbase', {words: wordList, loggedIn: req.session.isLoggedIn});
     })
 }
